2021-XX-XX   1.9.0:
-------------------
  * add `bitarray.util.ba2base()` and `bitarray.util.base2ba()`,
    see last paragraph in [Bitarray representations](examples/represent.md)
  * speedup initializing or extending a bitarray from another with different
    bit endianness
  * add documentation on bitarray representations


2021-03-25   1.8.1:
-------------------
  * moved implementation of and `hex2ba()` and `ba2hex()` to C-level
  * add `bitarray.util.parity()`


2021-03-21   1.8.0:
-------------------
  * add `bitarray.util.serialize()` and `bitarray.util.deserialize()`
  * allow whitespace (ignore space and `\n\r\t\v`) in input strings,
    e.g. `bitarray('01 11')` or `a += '10 00'`
  * add `bitarray.util.pprint()`
  * When initializing a bitarray from another with different bit endianness,
    e.g. `a = bitarray('110', 'little')` and `b = bitarray(a, 'big')`,
    the buffer used to be simply copied, with consequence that `a == b` would
    result in `False`.  This is fixed now, that is `a == b` will always
    evaluate to `True`.
  * add example showing how to jsonize bitarrays
  * add tests


2021-03-12   1.7.1:
-------------------
  * fix issue #114, raise TypeError when incorrect index is used during
    assignment, e.g. `a[1.5] = 1`
  * raise TypeError (not IndexError) when assigning slice to incorrect type,
    e.g. `a[1:4] = 1.2`
  * improve some docstrings and tests


2021-02-27   1.7.0:
-------------------
  * add `bitarray.util.urandom()`
  * raise TypeError when trying to extend bitarrays from bytes on Python 3,
    ie. `bitarray(b'011')` and `.extend(b'110')`.  (Deprecated since 1.4.1)


2021-01-20   1.6.3:
-------------------
  * add missing .h files to sdist tarball, #113


2021-01-20   1.6.2:
-------------------
  * use `Py_SET_TYPE()` and `Py_SET_SIZE()` for Python 3.10, #109
  * add official Python 3.10 support
  * fix slice assignment to same object,
    e.g. `a[2::] = a` or `a[::-1] = a`, #112
  * add bitarray.h, #110


2020-11-05   1.6.1: